Features/customerPortal/force-app/main/default/objects/Account/fields/Customer_Portal_Active__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Active</label>
    <type>Checkbox</type>
</CustomField>