Features/customerPortal/force-app/main/default/objects/Account/fields/Customer_Portal_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Email__c</fullName>
    <label>Customer Portal Email</label>
    <type>Email</type>
</CustomField>