Features/customerPortal/force-app/main/default/objects/Account/fields/Customer_Portal_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Last_Login__c</fullName>
    <label>Customer Portal Last Login</label>
    <type>DateTime</type>
</CustomField>