Features/customerPortal/force-app/main/default/objects/Account/fields/Customer_Portal_New_Password__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_New_Password__c</fullName>
    <label>Customer Portal Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>