Features/customerPortal/force-app/main/default/objects/Account/fields/Customer_Portal_Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Password_Hash__c</fullName>
    <label>Customer Portal Password Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>