Features/customerPortal/force-app/main/default/objects/Account/fields/Customer_Portal_Password_Set_At__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Password_Set_At__c</fullName>
    <label>Customer Portal Password Set At</label>
    <type>DateTime</type>
</CustomField>