Features/customerPortal/force-app/main/default/objects/Account/fields/Customer_Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Username__c</fullName>
    <externalId>true</externalId>
    <label>Customer Portal Username</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>